crates/eventric-domain/tests/ui/action_duplicate_field.stderr
error: duplicate projection field `p`
 --> tests/ui/action_duplicate_field.rs:4:38
  |
4 | #[action(projections: { p: X::new(), p: Y::new() })]
  |                                      ^
