crates/eventric-domain/tests/ui/action_duplicate_field.rs
use eventric_domain::action::Action;

#[derive(Action)]
#[action(projections: { p: X::new(), p: Y::new() })]
struct Bar;

fn main() {}
